# oj-eval-claude-code-069-20260401040245

./: CMakeLists.txt  Makefile  SOLUTION.md  main.cpp  template.h
